2006-02-27  Michael Yount <csf@moscow.com>

        * lib/Mj/Format.pm:  (who)  Display a list of subscribe commands
	when the who-export command is used without an admin password.
	Thanks to Roger Klorese.

2006-01-19  Michael Yount <csf@moscow.com>

	* lib/Mj/List.pm:  (set)  Add "exists" test to quell warning.
	Thanks to Brock Rozen.

2005-12-08  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (valid_list)  Escape dollar signs
	in substitution variables to avoid looping.
	Thanks to Marc Fournier.

2005-11-11  Michael Yount <csf@moscow.com>

	* lib/Mj/List.pm:  (flag_set)  Treat an invalid address as
	a nonmember instead of always returning zero.
	Thanks to Rado S.

2005-11-08  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (who_chunk)  Change control characters
	into hyphens in the delivery class.
	Thanks to Rado S.

2005-10-27  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (compile_pattern)  Remove redundant
	escaping of metacharacters.
	Thanks to Roger Klorese.

2005-10-09  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_list_file_execute)  Pass the interface
	(hardcoded to "shell") as an argument to parse_part().

	* lib/Mj/Parser.pm:  (parse_part)  Accept the interface as
	an argument, to allow files executed by mj_trigger to be
	parsed as if they came from mj_shell.
	Thanks to Roger Klorese.

2005-08-31  Michael Yount <csf@moscow.com>

	* lib/Mj/SimpleDB/Text.pm:  (add)  If the key already exists,
	replace the data if "force" mode is used.
	Thanks to SRE.

2005-08-09  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (list_config_set)  Change the setting
	to the new value, not the default value, in "noforce" mode.
	Fixed by Richard Birkett.

2005-05-15  Michael Yount <csf@moscow.com>

	* lib/Mj/Deliver/Dest.pm:  (make_qqenvelope)  Support
	personalization under qmail.
	Implemented by John Levine.

	* lib/Mj/Deliver/QQEnvelope.pm:  (new, address, send)
	Support personalization under qmail.
	Implemented by John Levine.
